# structural_geometry_2d

./: .gitignore  AGENTS.md  PROJEKT_CONTEXT.md  README.md  pyproject.toml
examples/: create_three_hinged_frame.py  plot_three_hinged_frame.py
notebooks/: demo_1.ipynb
src/structural_geometry_2d/: __init__.py  exceptions.py
src/structural_geometry_2d/generators/: __init__.py  three_hinged_frame.py
src/structural_geometry_2d/model/: connections.py  line_member.py  node.py  structural_geometry_2d.py  support.py
src/structural_geometry_2d/visualization/: __init__.py  plot_2d.py  projections.py
tests/: test_connections.py  test_line_member.py  test_node.py  test_plot_2d.py  test_projections.py  test_structural_geometry_2d.py  test_support.py  test_three_hinged_frame.py
