[project]
name = "structural-geometry-2d"
version = "0.1.0"
description = "A narrow Python package for creating and validating simple 2D structural geometry."
readme = "README.md"
authors = [
    { name = "Seb Hilgers", email = "sebhi@mailbox.org" }
]
requires-python = ">=3.12"
dependencies = [
    "ezdxf>=1.4.3",
    "ifcopenshell>=0.8.4.post1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pyvista>=0.47.1",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[project.scripts]
structural-geometry-2d = "structural_geometry_2d:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
